# harris-corner

./: README.md  mise.local.toml  pyproject.toml
data/output/stats/: corner_counts.csv
reports/: harris.md
src/: experiment_compare.py  experiment_param_sensitivity.py  run_manual_harris.py.py  run_opencv_harris.py  stat_corner_counts.py
src/harris/: harris.py  nms.py
